# src/chats/dto/create-chat.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsNumber } from 'class-validator';
+
+export class CreateChatDto {
+  @IsNotEmpty()
+  @IsNumber()
+  serviceId: number;
+}
